--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "petslovebackendtypescript",
+  "name": "apanay",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node.js",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\" ",
-    "build": "tsc"
+    "mongodb": "docker-compose --env-file .env up"
   },
   "keywords": [],
-  "author": "",
+  "author": "alex robaina",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/multer": "^1.4.3",
+    "@types/multer-s3": "^2.7.7",
+    "@types/nodemailer": "^6.4.0",
     "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^8.0.0",
+    "aws-sdk": "^2.713.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
     "form-data": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
     "morgan": "^1.10.0",
+    "mqtt": "^4.1.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "nodemailer": "^6.4.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "uuid": "^8.1.0"
@@ -35,7 +44,9 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.23",
     "@types/morgan": "^1.9.0",
+    "@types/node": "^14.6.4",
     "@types/passport": "^1.0.3",
+    "copyfiles": "^2.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5",
